--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "business-management",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+ "scripts": {
+  "dev": "next dev --turbopack",
+  "build": "prisma generate && next build",   
+  "start": "next start",
+  "lint": "next lint",
+  "postinstall": "prisma generate"   
+}
+,
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
