--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "business-management",
   "version": "0.1.0",
   "private": true,
- "scripts": {
-  "dev": "next dev --turbopack",
-  "build": "prisma generate && next build",   
-  "start": "next start",
-  "lint": "next lint",
-  "postinstall": "prisma generate"   
-}
-,
+"scripts": {
+  "dev": "next dev",
+  "build": "prisma generate && next build",
+  "postinstall": "prisma generate",
+  "start": "next start"
+},
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
